fix menue gap

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -163,7 +163,7 @@
   
   .nav {
     position: fixed;
-    top: 72px;
+    top: 65px;
     left: 0;
     right: 0;
     background-color: #000000;
